eliminar boton de google que era una prueba

--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 										<h3><span class="colored">Blare</span></h3>
 										<span>Landing Page</span>
 									</a><!-- .logo end -->
-									<a class="btn btn-header small rounded colorful hover-dark position-right move-top" href="https://google.com">google</a>
 									<a class="btn btn-header small rounded colorful hover-dark position-right move-top" href="https://share.hsforms.com/1074kWJkZRgmvZ8Nf-xxJxQedtxa">Contáctanos</a>
 								</div><!-- .hb-content end -->
 		
@@ -143,7 +142,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 									<p class="description">
 										¿Quieres conocer el valor de las conversaciones de tu empresa?<br>Nuestra aplicación lo hace posible. Con nuestra tecnología puedes obtener indicadores de gestión valiosos para mejorar la eficiencia de tu equipo de trabajo. Gestiona las tareas y el presentismo de tu equipo. <br>Descubre hoy cómo nuestra app puede transformar la forma en que trabaja tu equipo.
 									</p>
-									<a class="btn x-large colorful hover-dark rounded mt-20 move-top" href="https://calendly.com/d/yp5-w2r-8pc/30min">¡Agenda tu demo!</a>
+									<div class="hb-content">
+										<a class="btn x-large colorful hover-dark rounded mt-20 move-top" href="https://calendly.com/d/yp5-w2r-8pc/30min">¡Agenda tu demo!</a>
+									</div>
 								</div><!-- .banner-center-box end -->
 
 							</div><!-- .col-lg-8 -->
