cambio de botón de contacto por ingresar a dashboard con redirección de URL

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 										<h3><span class="colored">Blare</span></h3>
 										<span>Landing Page</span>
 									</a><!-- .logo end -->
-									<a class="btn btn-header small rounded colorful hover-dark position-right move-top" href="https://share.hsforms.com/1074kWJkZRgmvZ8Nf-xxJxQedtxa">Contáctanos</a>
+									<a class="btn btn-header small rounded colorful hover-dark position-right move-top" href="https://dashboard.qeeptouch.com">Ingresar</a>
 								</div><!-- .hb-content end -->
 		
 							</div><!-- .col-md-12 end -->
