cambio en la web principal.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 										<h3><span class="colored">Blare</span></h3>
 										<span>Landing Page</span>
 									</a><!-- .logo end -->
-									<a class="btn btn-header small rounded colorful hover-dark position-right move-top" href="https://dashboard.qeeptouch.com">Ingresar</a>
+									<a class="btn btn-header small rounded colorful hover-dark position-right move-top" href="https://dashboard.qeeptouch.com/login">Ingresar</a>
 								</div><!-- .hb-content end -->
 		
 							</div><!-- .col-md-12 end -->
@@ -121,29 +121,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- Banner
 		============================================= -->
 		<section id="banner">
-		
 			<div class="banner-parallax" data-banner-height="650">
-				<img src="https://3334265.fs1.hubspotusercontent-na1.net/hubfs/3334265/En%20que%CC%81%20puede%20trabajar%20un%20Ingeniero%20Industrial-Portada.png" alt="ingeniero">
-				<div class="overlay-colored color-bg-dark opacity-65"></div><!-- .overlay-colored end -->
+				<img src="https://firebasestorage.googleapis.com/v0/b/fixit-prod-141b2.appspot.com/o/logos-clientes%2FRecuperar%20Contrasen%CC%83a%20(1).png?alt=media&token=e59745a9-fed9-41a4-bad7-5f17516602ef" alt="ingeniero">
+				<div class="overlay-colored color-bg-dark opacity-15"></div><!-- .overlay-colored end -->
 				<div class="slide-content">
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-8 col-lg-push-2 col-md-10 col-md-push-1">
 
-								<div class="banner-center-box text-white text-center">								
+								<div class="banner-center-box text-white text-left">								
 									<h1>
-										<span class="heading-200">Hacemos visible</span>
+										<span class="heading-200"></span>
 										<br>
-										Lo invisible!
+										Gestion de asistencia ágil.
 										<br>
-										<p class="description">Mejoramos la comunicación de las organizaciones</p>
+										<p class="description">Gestioná la asistencia de tu equipo de la manera más simple posible!</p>
 									</h1>
 									<br>
 									<p class="description">
-										¿Quieres conocer el valor de las conversaciones de tu empresa?<br>Nuestra aplicación lo hace posible. Con nuestra tecnología puedes obtener indicadores de gestión valiosos para mejorar la eficiencia de tu equipo de trabajo. Gestiona las tareas y el presentismo de tu equipo. <br>Descubre hoy cómo nuestra app puede transformar la forma en que trabaja tu equipo.
+										Nuestro sistema de control ayuda al área de recursos humanos a gestionar de la manera más eficiente posible la asistencia de los colaboradores.<br>Descubre cómo Qontact puede transformar la forma en que trabaja tu equipo.
 									</p>
 									<div class="hb-content">
-										<a class="btn x-large colorful hover-dark rounded mt-20 move-top" href="https://calendly.com/d/yp5-w2r-8pc/30min">¡Agenda tu demo!</a>
+										<a class="btn x-medium colorful hover-dark rounded mt-10 move-top position-center" href="https://calendly.com/d/yp5-w2r-8pc/30min">¡Agenda tu demo!</a>
 									</div>
 								</div><!-- .banner-center-box end -->
 
@@ -186,7 +185,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								<div class="box-content">
 									<h5><a href="javascript:;">Diseño creativo</a></h5>
 									<p>
-										El diseño creativo de flujos es la clave para una experiencia de usuario excepcional.
+										El diseño creativo de nuestra interfaz facilita obtención de información para agilizar la gestión.
 									</p>
 								</div><!-- .box-content end -->
 							</div><!-- .box-info box-service-1 end -->
@@ -214,9 +213,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 									<i class="fas fa-project-diagram"></i>
 								</div><!-- .box-icon end -->
 								<div class="box-content">
-									<h5><a href="javascript:;">Flujos conversacionales</a></h5>
+									<h5><a href="javascript:;">Automatización de procesos</a></h5>
 									<p>
-										Los flujos conversacionales pueden ser infinitos, nuestro equipo te guiará para construirlos correctamente.
+										Nuestro equipo te guiará para implementar de manera eficiente el mejor sistema de control de asistencia.
 									</p>
 								</div><!-- .box-content end -->
 							</div><!-- .box-info box-service-1 end -->
@@ -246,28 +245,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 										de la buena comunicación
 									</h2>
 									<p class="description">
-										Ahorra tiempo y genera visibilidad de las tareas en Qontact y las conversaciones en WhastApp, mostrando así la eficiencia en la gestión de sus servicios a los clientes.
+										Ahorra tiempo y genera visibilidad con Qontact y las conversaciones en WhastApp, mostrando así la eficiencia en la gestión del presentismo.
 									</p>
 							</div><!-- .section-title end -->
 							<ul class="list-info arrow-right">
-								<li>Ahorro de tiempo en la gestión de tareas y servicios.</li>
+								<li>Ahorro de tiempo en la gestión de tareas administrativas.</li>
 								<li>Generación de tableros de seguimiento en tiempo real.</li>
-								<li>Integración con <strong>WhatsApp</strong> para una mejor comunicación.</li>
+								<li>Integración con <strong>WhatsApp</strong> para un registro ágil.</li>
 								<li>Automatización de procesos empresariales.</li>
 								<li>Presentismo de forma ágil y sencilla.</li>
 								<li>Acceso en la nube desde cualquier lugar y dispositivo.</li>
 								<li>Análisis de datos y generación de informes.</li>
 								<li>Mejora de la eficiencia en la gestión de servicios.</li>
-								<li>Construcción de conversaciones automatizadas.</li>
-								<li>Consultoria sobre procesos.</li>
-								<li>Adaptabilidad a diferentes industrias y empresas.</li>	
+								<li>Se adapta a diferentes industrias y empresas.</li>	
 							</ul><!-- .list-info.arrow-right end -->
 							<a class="btn colorful large hover-dark rounded mt-20 move-top" href="https://share.hsforms.com/1074kWJkZRgmvZ8Nf-xxJxQedtxa">¡Contáctanos!</a>
 
 						</div><!-- .col-md-6 end -->
 						<div class="col-md-6 mt-md-60">
 
-								<img src="https://firebasestorage.googleapis.com/v0/b/fixit-prod-141b2.appspot.com/o/landing-page%2FApp.gif?alt=media&token=9b8eaf0b-6cc1-495d-ae60-8d8f24759138" alt="">
+								<img src="https://firebasestorage.googleapis.com/v0/b/fixit-prod-141b2.appspot.com/o/logos-clientes%2Fgif-pantallas.gif?alt=media&token=3802269c-64d4-4ba7-acf3-b39d2774b636" alt="">
 							</div><!-- .img-featured-1 end -->
 
 						</div><!-- .col-md-6 -->
@@ -620,7 +617,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 										<div class="col-md-12">
 
 											<div class="copyrights-message">
-												<span>Copyright © 2023</span> <a href="https://www.qeeptouch.com" target="_blank">Qontact.</a> <span>All Rights
+												<span>Copyright © 2024</span> <a href="https://www.qeeptouch.com" target="_blank">Qontact.</a> <span>All Rights
 													Reserved.</span>
 											</div><!-- .copyrights-message end -->
 											<ul class="social-icons x4 grey-bg hover-colorful-bg animated rounded">
