Se agrega boton al blog de Qontact

--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 										<h3><span class="colored">Blare</span></h3>
 										<span>Landing Page</span>
 									</a><!-- .logo end -->
+									
+									<div class="nueva-seccion">
+										<a class="btn btn-header small rounded colorful hover-dark position-right move-top"href="https://qontact.notion.site/efee3844eed44d71968d45e011b964af?v=6b6ac0c2da6f4bf4889c7b5e677df890&pvs=4">Blog</a>
+									  </div><!-- .Blog end -->
+
 									<a class="btn btn-header small rounded colorful hover-dark position-right move-top" href="https://dashboard.qeeptouch.com/login">Ingresar</a>
 								</div><!-- .hb-content end -->
 		
