Se agregan logos de clientes

--- a/index.html
+++ b/index.html
@@ -483,6 +483,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						
 							<div class="section-title text-white">
 								<h2>
+									<br>
 									<span class="heading-200">Conoce a algunos</span>
 									<br>
 									de nuestros clientes
@@ -496,20 +497,35 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						</div><!-- .col-md-6 end -->
 						<div class="col-md-6">
 		
-							<ul class="list-clients list-boxes boxes-3">
+							<ul class="list-clients list-boxes boxes-6">
 								<li>
 									<div class="client-single">
-										<a href="javascript:;"><img src="images/files/sliders/clients/VMH.png" alt=""></a>
+										<a href="https://www.vacamuertahousing.com.ar"><img src="images/files/sliders/clients/vmh.png" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="client-single">
-										<a href="javascript:;"><img src="images/files/sliders/clients/Dazulsol.png" alt=""></a>
+										<a href="https://dzc.com.ar"><img src="images/files/sliders/clients/dazul.png" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="client-single">
-										<a href="javascript:;"><img src="images/files/sliders/clients/Ezca.png" alt=""></a>
+										<a href="https://ezcaservicios.com"><img src="images/files/sliders/clients/ezca.png" alt=""></a>
+									</div>
+								</li>
+								<li>
+									<div class="client-single">
+										<a href="https://www.facebook.com/BraderHops/"><img src="images/files/sliders/clients/brader.png" alt=""></a>
+									</div>
+								</li>
+								<li>
+									<div class="client-single">
+										<a href="https://www.gruporandazzo.com"><img src="images/files/sliders/clients/randazzo.png" alt=""></a>
+									</div>
+								</li>
+								<li>
+									<div class="client-single">
+										<a href=""><img src="images/files/sliders/clients/solmaq.png" alt=""></a>
 									</div>
 								</li>
 							</ul><!-- .list-boxes end -->
