nueva carpeta de imagenes

--- a/index.html
+++ b/index.html
@@ -549,32 +549,32 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							<ul class="list-clients list-boxes boxes-3">
 								<li>
 									<div class="client-single">
-										<a href="https://www.vacamuertahousing.com.ar"><img src="images/files/sliders/clients/VMH.png" alt=""></a>
+										<a href="https://www.vacamuertahousing.com.ar"><img src="images/clients/VMH.png" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="client-single">
-										<a href="https://dzc.com.ar"><img src="images/files/sliders/clients/dazul.png" alt=""></a>
+										<a href="https://dzc.com.ar"><img src="images/clients/dazul.png" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="client-single">
-										<a href="https://ezcaservicios.com"><img src="images/files/sliders/clients/ezca.png" alt=""></a>
+										<a href="https://ezcaservicios.com"><img src="images/clients/ezca.png" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="client-single">
-										<a href="https://www.facebook.com/BraderHops/"><img src="images/files/sliders/clients/brader.png" alt=""></a>
+										<a href="https://www.facebook.com/BraderHops/"><img src="images/clients/brader.png" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="client-single">
-										<a href="https://www.gruporandazzo.com"><img src="images/files/sliders/clients/randazzo.png" alt=""></a>
+										<a href="https://www.gruporandazzo.com"><img src="images/clients/randazzo.png" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="client-single">
-										<a href=""><img src="images/files/sliders/clients/solmaq.png" alt=""></a>
+										<a href=""><img src="images/clients/solmaq.png" alt=""></a>
 									</div>
 								</li>
 							</ul><!-- .list-boxes end -->
