--- a/index.html
+++ b/index.html
@@ -564,17 +564,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								</li>
 								<li>
 									<div class="client-single">
-										<a href="https://www.facebook.com/BraderHops/"><img src="images/clients/brader.png" alt="Brader Hops"></a>
+										<a href="https://www.facebook.com/BraderHops/"><img src="images/clients/brader.png" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="client-single">
-										<a href="https://www.gruporandazzo.com"><img src="images/clients/randazzo.png" alt="Randazzo"></a>
+										<a href="https://www.gruporandazzo.com"><img src="images/clients/randazzo.png" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="client-single">
-										<a href=""><img src="images/clients/solmaq.png" alt="solmaq"></a>
+										<a href=""><img src="images/clients/solmaq.png" alt=""></a>
 									</div>
 								</li>
 							</ul><!-- .list-boxes end -->
