cambio en columnas

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							<ul class="list-clients list-boxes boxes-3">
 								<li>
 									<div class="client-single">
-										<a href="https://www.vacamuertahousing.com.ar"><img src="images/clients/VMH.png" alt=""></a>
+										<a href="https://www.vacamuertahousing.com.ar"><img src="https://firebasestorage.googleapis.com/v0/b/fixit-prod-141b2.appspot.com/o/logos-clientes%2FImagenes%20del%20sitio%2Fvmh.png?alt=media&token=f8c774e6-12c5-454a-9f45-28b47de3321f" alt=""></a>
 									</div>
 								</li>
 								<li>
