Cambio en SRC de logos de clientes a Firestore

--- a/index.html
+++ b/index.html
@@ -554,27 +554,27 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								</li>
 								<li>
 									<div class="client-single">
-										<a href="https://dzc.com.ar"><img src="images/clients/dazul.png" alt=""></a>
+										<a href="https://dzc.com.ar"><img src="https://firebasestorage.googleapis.com/v0/b/fixit-prod-141b2.appspot.com/o/logos-clientes%2FImagenes%20del%20sitio%2Fdazul.png?alt=media&token=01750143-58d8-4ece-ac62-2fa989e43867" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="client-single">
-										<a href="https://ezcaservicios.com"><img src="images/clients/ezca.png" alt=""></a>
+										<a href="https://ezcaservicios.com"><img src="https://firebasestorage.googleapis.com/v0/b/fixit-prod-141b2.appspot.com/o/logos-clientes%2FImagenes%20del%20sitio%2Fezca.png?alt=media&token=09cfd50b-05c8-43a6-b655-847b605d6e10" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="client-single">
-										<a href="https://www.facebook.com/BraderHops/"><img src="images/clients/brader.png" alt=""></a>
+										<a href="https://www.facebook.com/BraderHops/"><img src="https://firebasestorage.googleapis.com/v0/b/fixit-prod-141b2.appspot.com/o/logos-clientes%2FImagenes%20del%20sitio%2Fbrader.png?alt=media&token=9c1e7ec1-801d-42c7-9690-7af2e36b7af3" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="client-single">
-										<a href="https://www.gruporandazzo.com"><img src="images/clients/randazzo.png" alt=""></a>
+										<a href="https://www.gruporandazzo.com"><img src="https://firebasestorage.googleapis.com/v0/b/fixit-prod-141b2.appspot.com/o/logos-clientes%2FImagenes%20del%20sitio%2Frandazzo.png?alt=media&token=8b9376b8-1bbc-4a46-bd91-10f921ecd20d" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="client-single">
-										<a href=""><img src="images/clients/solmaq.png" alt=""></a>
+										<a href=""><img src="https://firebasestorage.googleapis.com/v0/b/fixit-prod-141b2.appspot.com/o/logos-clientes%2FImagenes%20del%20sitio%2Fsolmaq.png?alt=media&token=ef296c69-1926-41c0-8239-d98402f2747f" alt=""></a>
 									</div>
 								</li>
 							</ul><!-- .list-boxes end -->
