actualizacion de logo y textos

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->	
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HEYHV0LHPP"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PDG2003BB7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HEYHV0LHPP');
+  gtag('config', 'G-PDG2003BB7');
 </script>
 <!-- End Google tag (gtag.js) -->	
 
@@ -66,7 +66,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	============================================= -->
 	<div id="loading-progress">
 		<a class="logo" href="#">
-			<img src="images/files/logo-q.png" data-logo-alt="images/files/logo-q.png" alt="">
+			<img src="https://firebasestorage.googleapis.com/v0/b/fixit-prod-141b2.appspot.com/o/logos-clientes%2FImagenes%20del%20sitio%2FLogoQ.png?alt=media&token=9e7730bc-c30a-42f6-9e4c-1c0e4255e436" data-logo-alt="images/files/logo-q.png" alt="">
 			<h3><span class="colored">Qontact</span></h3>
 			<span>HTML Template</span>
 		</a><!-- .logo end -->
@@ -140,16 +140,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 									<h1>
 										<span class="heading-200"></span>
 										<br>
-										Gestion de asistencia ágil.
+										Gestión de asistencia ágil.
 										<br>
-										<p class="description">Gestioná la asistencia de tu equipo de la manera más simple posible!</p>
+										<p class="description">Gestiona la asistencia de tu equipo de la manera más simple posible!</p>
 									</h1>
 									<br>
 									<p class="description">
-										Nuestro sistema de control ayuda al área de recursos humanos a gestionar de la manera más eficiente posible la asistencia de los colaboradores.<br>Descubre cómo Qontact puede transformar la forma en que trabaja tu equipo.
+										Nuestro sistema de control horario ayuda al área de recursos humanos a gestionar de la manera más eficiente posible el registro de jornada del empleado. <br>Descubre cómo Qontact puede transformar la forma en que trabaja tu equipo.
+
+										<br><br> Ahorra tiempo y genera visibilidad con Qontact y las conversaciones en WhastApp, mostrando así la eficiencia en la gestión del control horario.
 									</p>
 									<div class="hb-content">
-										<a class="btn x-medium colorful hover-dark rounded mt-10 move-top position-center" href="https://calendly.com/d/yp5-w2r-8pc/30min">¡Agenda tu demo!</a>
+										<a class="btn x-medium colorful hover-dark rounded mt-10 move-top position-center" href="https://calendly.com/ventas-es-qontact/30min">¡Agenda tu demo!</a>
 									</div>
 								</div><!-- .banner-center-box end -->
 
@@ -313,14 +315,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</div><!-- .section-title end -->
 							<ul class="list-info arrow-right">
 								<li>Ahorro de tiempo en la gestión de tareas administrativas.</li>
-								<li>Generación de tableros de seguimiento en tiempo real.</li>
+								<li>Disponibilidad en tiempo real de los expedientes digitales de los empleados.</li>
 								<li>Integración con <strong>WhatsApp</strong> para un registro ágil.</li>
-								<li>Automatización de procesos empresariales.</li>
 								<li>Presentismo de forma ágil y sencilla.</li>
 								<li>Acceso en la nube desde cualquier lugar y dispositivo.</li>
 								<li>Análisis de datos y generación de informes.</li>
 								<li>Mejora de la eficiencia en la gestión de servicios.</li>
 								<li>Se adapta a diferentes industrias y empresas.</li>	
+								<li><strong>Sin cantidad mínima de empleados</strong></li>
+								<li><strong>Sin periodo mínimo permanencia.</strong></li>	
 							</ul><!-- .list-info.arrow-right end -->
 							<a class="btn colorful large hover-dark rounded mt-20 move-top" href="https://share.hsforms.com/1074kWJkZRgmvZ8Nf-xxJxQedtxa">¡Contáctanos!</a>
 						</div><!-- .col-md-6 end -->
@@ -549,6 +552,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							<ul class="list-clients list-boxes boxes-3">
 								<li>
 									<div class="client-single">
+										<a href="https://alkiraliving.com"><img src="https://firebasestorage.googleapis.com/v0/b/fixit-prod-141b2.appspot.com/o/logos-clientes%2FImagenes%20del%20sitio%2FAlkira.png?alt=media&token=843f4409-93ad-4e28-838d-a9a581ece7fd" alt=""></a>
+									</div>
+								</li>
+								<li>
+									<div class="client-single">
 										<a href="https://www.vacamuertahousing.com.ar"><img src="https://firebasestorage.googleapis.com/v0/b/fixit-prod-141b2.appspot.com/o/logos-clientes%2FImagenes%20del%20sitio%2Fvmh.png?alt=media&token=f8c774e6-12c5-454a-9f45-28b47de3321f" alt=""></a>
 									</div>
 								</li>
@@ -572,11 +580,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 										<a href="https://www.gruporandazzo.com"><img src="https://firebasestorage.googleapis.com/v0/b/fixit-prod-141b2.appspot.com/o/logos-clientes%2FImagenes%20del%20sitio%2Frandazzo.png?alt=media&token=8b9376b8-1bbc-4a46-bd91-10f921ecd20d" alt=""></a>
 									</div>
 								</li>
-								<li>
-									<div class="client-single">
-										<a href=""><img src="https://firebasestorage.googleapis.com/v0/b/fixit-prod-141b2.appspot.com/o/logos-clientes%2FImagenes%20del%20sitio%2Fsolmaq.png?alt=media&token=ef296c69-1926-41c0-8239-d98402f2747f" alt=""></a>
-									</div>
-								</li>
+								
 							</ul><!-- .list-boxes end -->
 		
 						</div><!-- .col-md-6 end -->
@@ -633,7 +637,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 									<div class="row">
 										<div class="col-md-3">
 
-											<img class="mb-md-40" src="images/files/logo-q.png" alt="">
+											<img class="mb-md-40" src="https://firebasestorage.googleapis.com/v0/b/fixit-prod-141b2.appspot.com/o/logos-clientes%2FImagenes%20del%20sitio%2FLogoQ.png?alt=media&token=9e7730bc-c30a-42f6-9e4c-1c0e4255e436" alt="">
 
 										</div><!-- .col-md-3 end -->
 										<div class="col-md-3">
@@ -645,8 +649,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 												<div class="box-content">
 													<h6>Dirección de contacto</h6>
 													<p>
-														928 Marcelo T. de Alvear<br>      
-														Ciudad de Buenos Aires.
+														Calle Fuero de Avilés, 32, 2B.<br>      
+														Avilés - España. 33401.
 													</p>
 												</div><!-- .box-content end -->
 											</div><!-- .box-info box-contact-info-1 end -->
@@ -661,7 +665,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 												<div class="box-content">
 													<h6>Teléfono de contacto</h6>
 													<p>
-														+54 911 5646 8407
+														+34 685 58 37 83
 														<br>
 													
 													</p>
@@ -678,9 +682,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 												<div class="box-content">
 													<h6>Email de contacto</h6>
 													<p>
-														comercial@qeeptouch.com
+														ventas.es@qontact.es
 														<br>
-														soporte@qeeptouch.com
+														soporte@qontact.es
 													</p>
 												</div><!-- .box-content end -->
 											</div><!-- .box-info box-contact-info-1 end -->
